--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <html>
 
     <head>
-    	<script src="libs/jquery.js"></script>
 
-		<script src="js/src/functions.js"></script>
-        <script src="js/src/assets.js"></script>
-        <script src="js/src/engien.js"></script>
+    	<script src="libs/jquery.js"></script>
+    	<script src="libs/browser-polyfill.min.js"></script>
+
+		<script src="js/build/functions.js"></script>
+        <script src="js/build/assets.js"></script>
+        <script src="js/build/engien.js"></script>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -14,7 +16,7 @@
 
     <body>
         <div class="main">
-            <div class="deadScreen" data-display="false">
+            <div class="deadScreen screen hidden">
 				<div class="wrapper">
 					<div class="stats">
 						<span class="row"><a>Score: </a><a class="score"></a></span>
@@ -34,7 +36,7 @@
 
 			</div>
 
-			<div class="unlocksScreen" data-display="false">
+			<div class="unlocksScreen screen">
 
 				<div class="back Btn">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 136 108.85">
@@ -55,11 +57,11 @@
 
 			</div>
 
-			<div class="startScreen" data-display="true">
+			<div class="startScreen screen">
 				<div class="wrapper">
 					<div class="row">
 						<h1 class="title">Uncut</h1>
-						<a class="version">0.2.2</a>
+						<a class="version">0.2.6</a>
 					</div>
 					<div class="row int">
 						<div class="stats">
@@ -67,7 +69,7 @@
 							<span class="container"><a>Crashes: </a><a class="crashes"></a></span>
 						</div>
 						<div class="buttons">
-							<div class="unlocksBtn">
+							<div class="unlocksBtn" style="display:none">
 								<svg version="1.1" x="0px" y="0px" height="100%" viewBox="0 0 188 188" style="overflow:scroll;enable-background:new 0 0 188 188;">
 									<style type="text/css"> .st0{fill:#FFFFFF;} .st1{fill:#333333;} </style>
 									<circle class="st0" cx="94" cy="94" r="94"/>
@@ -90,9 +92,11 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 
-		<script src="./js/src/main.js"></script>
+		<script src="./js/build/main.js"></script>
+
     </body>
 
 </html>
