--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
 			</div>
 
-			<div class="unlocksScreen screen">
+			<div class="unlocksScreen screen hidden">
 
 				<div class="back Btn">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 136 108.85">
@@ -61,7 +61,7 @@
 				<div class="wrapper">
 					<div class="row">
 						<h1 class="title">Uncut</h1>
-						<a class="version">0.2.6</a>
+						<a class="version">0.2.7</a>
 					</div>
 					<div class="row int">
 						<div class="stats">
