--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 				<div class="wrapper">
 					<div class="row">
 						<h1 class="title">Uncut</h1>
-						<a class="version">0.2.7</a>
+						<a class="version">0.2.72</a>
 					</div>
 					<div class="row int">
 						<div class="stats">
@@ -69,7 +69,7 @@
 							<span class="container"><a>Crashes: </a><a class="crashes"></a></span>
 						</div>
 						<div class="buttons">
-							<div class="unlocksBtn" style="display:none">
+							<div class="unlocksBtn" style="display:block">
 								<svg version="1.1" x="0px" y="0px" height="100%" viewBox="0 0 188 188" style="overflow:scroll;enable-background:new 0 0 188 188;">
 									<style type="text/css"> .st0{fill:#FFFFFF;} .st1{fill:#333333;} </style>
 									<circle class="st0" cx="94" cy="94" r="94"/>
