--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 				<div class="wrapper">
 					<div class="row">
 						<h1 class="title">Uncut</h1>
-						<a class="version">0.2.72</a>
+						<a class="version beta">v0.2.8</a>
 					</div>
 					<div class="row int">
 						<div class="stats">
@@ -91,6 +91,10 @@
 						</div>
 					</div>
 				</div>
+			</div>
+
+			<div id="HUD" class="hidden">
+				<span class="scoreDisplay">0</span>
 			</div>
 
 		</div>
